# argoncube2x2geo

./: CMakeLists.txt  Configuration.json  LightSourceSteering.txt  README.md  TODO.txt  construct.cxx  detector.gdml  detectorView.C  drawDetector.sh  envsetup.sh  materialDisplay.C  rebuild.sh  vis.mac
config/: Configuration.json  LightSourceSteering.txt  LightSourceSteering1cmVoxels.txt  long.txt  opReferenceTable1cmVoxel.txt  temp2.txt
config/voxels/: voxelization.txt
config/voxels2/: opReferenceTable.txt
include/: ActionInitialization.h  Analyzer.h  Configuration.h  Cryostat.h  CryostatVolume.h  Detector.h  DetectorConstruction.h  DiskVolume.h  G4Helper.h  MPPCSD.h  MaterialManager.h  Module.h  ModuleVolume.h  OpDetPhotonTable.h  OpticalPhysics.h  PhysicsList.h  PrimaryGeneratorAction.h  QuantityStore.h  Reconstructor.h  Reconstructor.txt  SteppingAction.h  Utilities.h  Voxel.h  VoxelTable.h  WheelVolume.h
include/Geometry/Auxiliary/: Feedthrough.h  ModuleFastener.h  PixelPlane.h
include/Geometry/Cryostat/: Cryostat.h  CryostatBody.h  CryostatFT.h  CryostatFlange.h  CryostatLeg.h  CryostatLegs.h
include/Geometry/Detector/: Detector.h
include/Geometry/Module/: Module.h  ModuleActive.h  ModuleBottom.h  ModuleFlange.h  ModuleTop.h
include/old/: MPPCVolume.txt
output/: simulateOutput.root  simulateOutput1000NEW.root  simulateOutput1000OldBug.root  sipmwheel.gdml
production/: 1000000_probabilities.root
scripts/: getGraph.C  makeLightSteering.C  makeLightSteering1cm.C  makeLightSteering2.C  makeLightSteeringXAxis.C  makePngs.C
scripts/analysis/: ana.C  ana.h  centerAna1000.C  centerAna1000.h  centerAna1000NEW.C  centerAna1000NEW.h  make_class.C
src/: .Module.cxx.swp  .ModuleVolume.cxx.swp  ActionInitialization.cxx  Analyzer.cxx  Configuration.cxx  Cryostat.cxx  CryostatVolume.cxx  Detector.cxx  DetectorConstruction.cxx  DiskVolume.cxx  G4Helper.cxx  MPPCSD.cxx  MPPCVolume.cxx  MaterialManager.cxx  Module.cxx  ModuleVolume.cxx  OpDetPhotonTable.cxx  OpticalPhysics.cxx  PhysicsList.cxx  PrimaryGeneratorAction.cxx  QuantityStore.cxx  Reconstructor.cxx  Reconstructor.txt  SteppingAction.cxx  Utilities.cxx  Voxel.cxx  VoxelTable.cxx  WheelVolume.cxx
src/Geometry/Auxiliary/: Feedthrough.cxx  ModuleFastener.cxx  PixelPlane.cxx
src/Geometry/Cryostat/: Cryostat.cxx  CryostatBody.cxx  CryostatFT.cxx  CryostatFlange.cxx  CryostatLeg.cxx  CryostatLegs.cxx
src/Geometry/Detector/: Detector.cxx
src/Geometry/Module/: Module.cxx  ModuleActive.cxx  ModuleBottom.cxx  ModuleFlange.cxx  ModuleFlange.txt  ModuleTop.cxx
src/old/: MPPCVolume.txt
